@@ -1,4 +1,4 @@
-# $Id: TestEm2.in,v 1.2 2000-06-20 12:58:06 maire Exp $
+# $Id: TestEm2.in,v 1.3 2001-10-31 17:34:12 maire Exp $
 #
 # Macro file for "TestEm2.cc" 
 # (can be run in batch, without graphic)
@@ -10,16 +10,15 @@
 #
 /control/verbose 2
 #
+/run/particle/setCut 5.0 mm
+/run/initialize
+#
 /calor/setMat Water
 /calor/setLbin 9 1.11
 /calor/setRbin 6 0.111
 /calor/update
 #
-/run/particle/setCut 5.0 mm
-/run/initialize
-#
 /run/verbose 2
-/event/drawTracks none
 /event/printModulo 20
 #
 /gun/particle e-
