@@ -1,4 +1,4 @@
-# $Id: run02.mac,v 1.3 2000-06-20 12:58:06 maire Exp $
+# $Id: run02.mac,v 1.4 2001-10-31 17:34:12 maire Exp $
 #
 # Macro file for "TestEm2.cc" 
 # (can be run in batch, without graphic)
@@ -10,16 +10,15 @@
 #
 /control/verbose 2
 #
+/run/particle/setCut 2.0 mm
+/run/initialize
+#
 /calor/setMat Al
 /calor/setLbin 12 1.1245
 /calor/setRbin 12 0.11245
 /calor/update
 #
-/run/particle/setCut 2.0 mm
-/run/initialize
-#
 /run/verbose 2
-/event/drawTracks none
 /event/printModulo 10
 #
 /gun/particle e-
