@@ -1,4 +1,4 @@
-# $Id: run03.mac,v 1.4 2001-10-25 15:12:05 maire Exp $
+# $Id: run03.mac,v 1.5 2001-10-31 17:34:12 maire Exp $
 #
 # Macro file for "TestEm2.cc" 
 # (can be run in batch, without graphic)
@@ -10,16 +10,15 @@
 #
 /control/verbose 2
 #
+/run/particle/setCut 5.0 mm
+/run/initialize
+#
 /calor/setMat Water
 /calor/setLbin 9 1.11
 /calor/setRbin 6 0.111
 /calor/update
 #
-/run/particle/setCut 5.0 mm
-/run/initialize
-#
 /run/verbose 2
-/event/drawTracks  charged
 /event/printModulo 10
 #
 /gun/particle e-
