@@ -1,4 +1,4 @@
-$Id: History,v 1.13 2001-10-25 15:12:05 maire Exp $
+$Id: History,v 1.14 2001-10-31 17:34:11 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,9 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+     
+31-10-01 mma (testem2-V03-02-01)
+- invert run/initialize and calor/update in all runXX.mac (and TestEm2.in)
      
 25-10-01 mma (testem2-V03-02-00)
 - mods in TestEm2.cc: the initialisation and vis initialisation are
